--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
         "extensions": [".js", ".jsx"]
       }
     ],
+    "no-console": 2,
     "react/prop-types": 0,
     "no-nested-ternary": 0,
     "jsx-a11y/anchor-is-valid": 0,
