--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "no-console": 2,
     "react/prop-types": 0,
     "no-nested-ternary": 0,
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
