--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "NODE_PATH=. react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "NODE_ENV=production lint-staged",
-    "lint": "eslint src/ --fix && stylelint src/*.scss --fix"
+    "lint": "eslint src/ --fix && stylelint src/*.scss --fix",
+    "deploy": "yarn build && scp -r  ./build/* dawnleo@amoeba.social:/home/dawnleo/new.nishants.site/public/",
+    "deploy:prod": "yarn lint && yarn test && yarn build && scp -r  ./build/* dawnleo@amoeba.social:/home/dawnleo/nishants.site/public/"
   },
   "lint-staged": {
     "*.{js,jsx}": [
